--- a/log-beta.html
+++ b/log-beta.html
@@ -258,7 +258,7 @@
         let text = notes[0].text.replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "").replace(/@\S+/g, "").trim();
         let fn = new Function(`${text}`);
         let result = fn();
-        showData(`[${content}]\n\n${result}\n\n${text}`);
+        showData(`[${content}]\n\n${result}`);
         showStatus("done", true);
     }
 
