--- a/log-beta.html
+++ b/log-beta.html
@@ -934,7 +934,7 @@
             return;
         }
 
-        if (["tag:", "text:", "date:", "name:"].some(k => content.indexOf(k) >= 0)) {
+        if (["tag:", "text:", "date:", "name:", "recent:", "next:"].some(k => content.indexOf(k) >= 0)) {
             return;
         }
 
