--- a/log-beta.html
+++ b/log-beta.html
@@ -842,10 +842,10 @@
     showContacts = (list) => {
         let subList = [];
         list.forEach(l => {
-            let numbers = l.text.match(/+[0-9-/]+\/g);
+            let numbers = l.text.match(/\+[0-9a-z/]+/g);
             let categories = l.text.match(/![a-z0-9-]+/g);
             let category = (categories || []).length > 0 ? categories[0].substring(1) : contactTag;
-            let name = l.text.replace(/+[0-9-/]+/g, "").replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "");
+            let name = l.text.replace(/\+[0-9a-z/]+/g, "").replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "");
             let all = name.split("/");
             let contact = { l.date, name: all[0], comment: all[1], category, numbers = [], comment = "" };
             numbers.forEach(n => {
