--- a/log-beta.html
+++ b/log-beta.html
@@ -229,7 +229,7 @@
             }
             case ".contact": {
                 showStatus(action);
-                doFunction(content);
+                doContact(content);
                 break;
             }
             default: {
