--- a/log-beta.html
+++ b/log-beta.html
@@ -847,10 +847,12 @@
             let category = (categories || []).length > 0 ? categories[0].substring(1) : contactTag;
             let name = l.text.replace(/\+[0-9a-z/]+/g, "").replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "");
             let all = name.split("/");
-            let contact = { date: l.date, name: all[0], comment: all[1], category, numbers: [] };
+            let comment = all.length > 1 ? all[1] : "";
+            let contact = { date: l.date, name: all[0], comment, category, numbers: [] };
             numbers.forEach(n => {
-                let all = n.split("/");
-                contact.numbers.push({ number, comment: all[1]});
+                all = n.split("/");
+                comment = all.length > 1 ? all[1] : "";
+                contact.numbers.push({ number: all[0], comment});
             });
             subList.push(contact);
         });
