--- a/log-beta.html
+++ b/log-beta.html
@@ -842,18 +842,19 @@
     showContacts = (list) => {
         let subList = [];
         list.forEach(l => {
-            let numbers = l.text.match(/\+[0-9a-z/]+/g) || [];
+            let numbers = l.text.match(/\+[0-9a-z/]+/g) || ["?"];
             let categories = l.text.match(/![a-z0-9-]+/g);
             let category = (categories || []).length > 0 ? categories[0].substring(1) : contactTag;
             let name = l.text.replace(/\+[0-9a-z/]+/g, "").replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "");
-            let all = name.split("/");
-            let comment = all.length > 1 ? all[1] : "";
+            let all = !name ? name.split("/") : ["Unknown"];
+            let comment = all.length > 1 ? all[1].trim() : "";
             let contact = { date: l.date, name: all[0], comment, category, numbers: [] };
             numbers.forEach(n => {
                 all = n.split("/");
                 comment = all.length > 1 ? all[1] : "";
                 contact.numbers.push({ number: all[0], comment});
             });
+            numbers
             subList.push(contact);
         });
         subList.sort((a, b) => b.name == a.name ? new Date(b.date) - new Date(a.date)  : b.name - a.name);
