--- a/log-beta.html
+++ b/log-beta.html
@@ -59,7 +59,7 @@
     const timerTag = "timer";
     const functionTag = "function";
     const contactTag = "contact";
-    const skipTags = `-${linkTag}&-${expenseTag}&-${taskTag}&-${listTag}&-${functionTag}`;
+    const skipTags = `-${linkTag}&-${expenseTag}&-${taskTag}&-${listTag}&-${functionTag}&-${contactTag}`;
 
     window.addEventListener("load", () => {
         loadNotes();
