--- a/log-beta.html
+++ b/log-beta.html
@@ -842,13 +842,13 @@
     showContacts = (list) => {
         let subList = [];
         list.forEach(l => {
+            let name = l.text.split("+")[0];
             let numbers = l.text.match(/\+[0-9a-z/]+/g) || ["?"];
-            let categories = l.text.match(/![a-z0-9-]+/g);
-            let category = (categories || []).length > 0 ? categories[0].substring(1) : contactTag;
-            let name = l.text.replace(/\+[0-9a-z/]+/g, "").replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "");
+            let categories = l.text.match(/![a-z0-9-]+/g) || [];
+            let category = categories.length > 0 ? categories[0].substring(1) : contactTag;
+            let comment = l.text.replace(/\+[0-9a-z/]+/g, "").replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "").replace(name, "");
             let all = !name || !name.trim() ? ["?"] : name.split("/");
-            let comment = all.length > 1 ? all[1].trim() : "";
-            let contact = { date: l.date, name: all[0], comment, category, numbers: [] };
+            let contact = { date: l.date, name: (name || name.trim()) ? name : "?", comment ? comment.trim() : "", category, numbers: [] };
             numbers.forEach(n => {
                 all = n.split("/");
                 comment = all.length > 1 ? all[1] : "";
@@ -861,9 +861,8 @@
         let message = "";
         let wrap = (text) => !text ? "" : ` (${text})`;
         subList.forEach(sl => {
-            message = `${message}${sl.name}${wrap(sl.comment)}`;
             sl.numbers.forEach(n => message = `${message}\n${n.number}${wrap(n.comment)}`);
-            message = `${message}\n\n`;
+            message = !sl.comment ? `${message}\n\n` : `${message}\n${sl.comment}\n\n`;
         });
         showData(message);
         showStatus(subList.length, true);
